css fix for touch-callout on mobiles

--- a/pages/docu/visu.css
+++ b/pages/docu/visu.css
@@ -11,7 +11,7 @@
 
 /* enable selecting text in docu pages only */
 html body {
-  -webkit-touch-callout: default!important;
+  -webkit-touch-callout: none!important;
   -webkit-user-select: text!important;
   -moz-user-select: text!important;
   -ms-user-select: text!important;
